--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "set DEBUG=loc8r:* && set NODE_ENV=dev&& nodemon bin/www"
   },
   "engines": {
     "node": "~6.3.0",
@@ -15,8 +15,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "^1.11.0",
+    "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta10",
+    "readline": "^1.3.0",
     "serve-favicon": "~2.3.0"
   }
 }
