--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set DEBUG=loc8r:* && set NODE_ENV=dev&& nodemon bin/www"
+    "start": "set DEBUG=loc8r:* && nodemon bin/www"
   },
   "engines": {
     "node": "~6.3.0",
@@ -22,3 +22,4 @@
     "serve-favicon": "~2.3.0"
   }
 }
+
