--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Loc8r",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "set DEBUG=loc8r:* && nodemon ./bin/www"
   },
   "engines": {
     "node": "~6.3.0",
