--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "set DEBUG=loc8r:* && nodemon ./bin/www"
+    "start": "set DEBUG=loc8r:* && node ./bin/www"
   },
   "engines": {
     "node": "~6.3.0",
