--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta10",
     "readline": "^1.3.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.3.0"
   }
 }
